Integrate new microservices and enhance security in API gateway.